--- a/Practice/css/practice.css
+++ b/Practice/css/practice.css
@@ -4,61 +4,195 @@
 
 @charset "utf-8";
 
-.pb_staff_list, .pb_staff_list-item { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; -ms-box-sizing: border-box; -o-box-sizing: border-box; box-sizing: border-box; }
+.pb_staff_list,
+.pb_staff_list-item {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  box-sizing: border-box;
+}
 
-.pb_staff_list { color: #666; font-size: 14px; line-height: 2; }
-.pb_staff_list-item { border: 1px solid #ddd; border-top: none; padding: 38px 6.66%; }
-.pb_staff_list-item:first-child { border-top: 1px solid #ddd; }
+.pb_staff_list {
+  color: #666;
+  font-size: 14px;
+  line-height: 2;
+}
+.pb_staff_list-item {
+  border: 1px solid #ddd;
+  border-top: none;
+  padding: 38px 6.66%;
+}
+.pb_staff_list-item:first-child {
+  border-top: 1px solid #ddd;
+}
 
-.pb_staff_list-item > :last-child { margin-bottom: 0; }
+.pb_staff_list-item > :last-child {
+  margin-bottom: 0;
+}
 
-.pb_staff_list-item-upside.has-image { display: -webkit-box; display: -moz-box; display: -ms-flexbox; display: -webkit-flex; display: -moz-flex; display: flex; align-items: center; }
-.pb_staff_list-item-upside.has-image .pb_staff_list-image { width: 48%; }
-.pb_staff_list-item-upside.has-image .pb_staff_list-image img { display: block; width: 100%; height: auto; }
-.pb_staff_list-item-upside.has-image .pb_staff_list-names { width: 52%; padding-left: 7.4%; }
+.pb_staff_list-item-upside.has-image {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: flex;
+  align-items: center;
+}
+.pb_staff_list-item-upside.has-image .pb_staff_list-image {
+  width: 48%;
+}
+.pb_staff_list-item-upside.has-image .pb_staff_list-image img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+.pb_staff_list-item-upside.has-image .pb_staff_list-names {
+  width: 52%;
+  padding-left: 7.4%;
+}
 
-.pb_staff_list-names { line-height: 1.8; }
-.pb_staff_list-position { color: #000; font-weight: 500; }
-.pb_staff_list-name { color: #000; font-size: 18px; line-height: 1.5; font-weight: 500; }
-.pb_staff_list-othername { font-size: 12px; }
-.pb_staff_list-item-upside { margin-bottom: 30px; }
-.pb_staff_list-description { margin-bottom: 24px; }
-.pb_staff_list-career { font-size: 12px; }
-.pb_staff_list-career .pb_staff_list-career-heading { font-size: 14px; }
+.pb_staff_list-names {
+  line-height: 1.8;
+}
+.pb_staff_list-position {
+  color: #000;
+  font-weight: 500;
+}
+.pb_staff_list-name {
+  color: #000;
+  font-size: 18px;
+  line-height: 1.5;
+  font-weight: 500;
+}
+.pb_staff_list-othername {
+  font-size: 12px;
+}
+.pb_staff_list-item-upside {
+  margin-bottom: 30px;
+}
+.pb_staff_list-description {
+  margin-bottom: 24px;
+}
+.pb_staff_list-career {
+  font-size: 12px;
+}
+.pb_staff_list-career .pb_staff_list-career-heading {
+  font-size: 14px;
+}
 
-.pb_staff_list-social { font-size: 12px; list-style: none !important; margin: 0 !important; padding: 0 !important; }
-.pb_staff_list-social li { display: inline; list-style: none; margin: 0 12px 0 0; padding: 0; }
-.pb_staff_list-social li:last-child { margin-right: 0; }
-.pb_staff_list-social li a { color: #666; text-decoration: none !important; }
+.pb_staff_list-social {
+  font-size: 12px;
+  list-style: none !important;
+  margin: 0 !important;
+  padding: 0 !important;
+}
+.pb_staff_list-social li {
+  display: inline;
+  list-style: none;
+  margin: 0 12px 0 0;
+  padding: 0;
+}
+.pb_staff_list-social li:last-child {
+  margin-right: 0;
+}
+.pb_staff_list-social li a {
+  color: #666;
+  text-decoration: none !important;
+}
 
-.pb_staff_list-social li a:before { font-family: "design_plus"; -webkit-transition-property: none; }
-.pb_staff_list-social-facebook a:before { content: "\e902"; }
-.pb_staff_list-social-twitter a:before { content: "\e904"; }
-.pb_staff_list-social-instagram a:before { content: "\ea92"; }
-.pb_staff_list-social-rss a:before { content: "\e90b"; }
+.pb_staff_list-social li a:before {
+  font-family: "design_plus";
+  -webkit-transition-property: none;
+}
+.pb_staff_list-social-facebook a:before {
+  content: "\e902";
+}
+.pb_staff_list-social-twitter a:before {
+  content: "\e904";
+}
+.pb_staff_list-social-instagram a:before {
+  content: "\ea92";
+}
+.pb_staff_list-social-rss a:before {
+  content: "\e90b";
+}
 
 @media only screen and (min-width: 768px) {
-	.pb_staff_list { color: #666; font-size: 14px; line-height: 2.4; display: -webkit-box; display: -moz-box; display: -ms-flexbox; display: -webkit-flex; display: -moz-flex; display: flex; -webkit-box-lines: multiple; -moz-box-lines: multiple; -webkit-flex-wrap: wrap; -moz-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; }
-	.pb_staff_list-item { width: 50%; border: 1px solid #ddd; padding: 58px 4.9%; }
-	.pb_staff_list-item:nth-child(even) { border-left: none; }
-	.pb_staff_list-item:nth-child(n+3) { border-top: none; }
+  .pb_staff_list {
+    color: #666;
+    font-size: 14px;
+    line-height: 2.4;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: flex;
+    -webkit-box-lines: multiple;
+    -moz-box-lines: multiple;
+    -webkit-flex-wrap: wrap;
+    -moz-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+  }
+  .pb_staff_list-item {
+    width: 50%;
+    border: 1px solid #ddd;
+    padding: 58px 4.9%;
+  }
+  .pb_staff_list-item:nth-child(even) {
+    border-left: none;
+  }
+  .pb_staff_list-item:nth-child(n + 3) {
+    border-top: none;
+  }
 
-	.pb_staff_list-item-upside.has-image { display: -webkit-box; display: -moz-box; display: -ms-flexbox; display: -webkit-flex; display: -moz-flex; display: flex; align-items: center; }
-	.pb_staff_list-item-upside.has-image .pb_staff_list-image { width: 54%; }
-	.pb_staff_list-item-upside.has-image .pb_staff_list-names { width: 46%; padding-left: 12%; }
+  .pb_staff_list-item-upside.has-image {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: flex;
+    align-items: center;
+  }
+  .pb_staff_list-item-upside.has-image .pb_staff_list-image {
+    width: 54%;
+  }
+  .pb_staff_list-item-upside.has-image .pb_staff_list-names {
+    width: 46%;
+    padding-left: 12%;
+  }
 
-	.pb_staff_list-names { line-height: 2; }
-	.pb_staff_list-position { color: #000; }
-	.pb_staff_list-name { color: #000; font-size: 22px; line-height: 1.5; }
-	.pb_staff_list-item-upside { margin-bottom: 50px; }
-	.pb_staff_list-description { margin-bottom: 40px; }
-	.pb_staff_list-career { font-size: 14px; }
+  .pb_staff_list-names {
+    line-height: 2;
+  }
+  .pb_staff_list-position {
+    color: #000;
+  }
+  .pb_staff_list-name {
+    color: #000;
+    font-size: 22px;
+    line-height: 1.5;
+  }
+  .pb_staff_list-item-upside {
+    margin-bottom: 50px;
+  }
+  .pb_staff_list-description {
+    margin-bottom: 40px;
+  }
+  .pb_staff_list-career {
+    font-size: 14px;
+  }
 }
 
 .frame {
-	position: relative;
-	display: inline-block;
-	border-radius: 50%;
-	width: 250px;
-	height: 250px;
+  position: relative;
+  display: inline-block;
+  border-radius: 50%;
+  width: 250px;
+  height: 250px;
+  border: double;
 }
