--- a/Practice/css/practice.css
+++ b/Practice/css/practice.css
@@ -194,5 +194,6 @@
   border-radius: 50%;
   width: 250px;
   height: 250px;
-  border: double;
+  border: solids;
+  box-shadow: 2px 2px 4px -2px gray inset;
 }
