--- a/Practice/css/practice.css
+++ b/Practice/css/practice.css
@@ -196,5 +196,33 @@
   height: 250px;
   border: solids;
   box-shadow: 2px 2px 4px -2px gray inset;
+}
+
+.image {
+  text-align: center;
   margin: 20px;
+  position: relative;
+}
+
+.image::before,
+.image::after {
+  content: "";
+  position: absolute;
+  transform: rotate(-35deg);
+  width: 70px;
+  height: 25px;
+  background-color: #fff;
+  z-index: 1;
+}
+
+.image::before {
+  top: -10px;
+  left: -25px;
+  border-bottom: 1px solid #aaa;
+}
+
+.image::after {
+  bottom: -10px;
+  right: -25px;
+  border-top: 1px solid #aaa;
 }
